--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,6 @@
 		<java.version>17</java.version>
 	</properties>
 
-	<dependencies>
-
-	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -42,7 +38,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
+	<scm>
+		<url>https://github.com/itamarc/sfg-petclinic.git</url>
+		<developerConnection>scm:git:git@github.com:itamarc/sfg-petclinic.git</developerConnection>
+	</scm>
 </project>
