--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-petclinic</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <modules>
@@ -49,6 +49,5 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:itamarc/sfg-petclinic.git</developerConnection>
-    <tag>sfg-petclinic-0.0.2</tag>
   </scm>
 </project>
